Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
5.2.0 Beta1
-
None
-
5.2 stable branch on Linux
-
7c6d2d78fe0997dfebba5569f097bdacbba5a861
Description
I don't have a test-case.
==9291== at 0x1C59DCF8: ???
==9291== by 0x64A74F3: QV4::Function::code(QV4::ExecutionContext*, unsigned char const*) (qv4function_p.h:89)
==9291== by 0x64A675E: QV4::SimpleScriptFunction::call(QV4::Managed*, QV4::CallData*) (qv4functionobject.cpp:567)
==9291== by 0x64655EA: QV4::FunctionObject::call(QV4::CallData*) (qv4functionobject_p.h:130)
==9291== by 0x6478289: QV4::__qmljs_call_property(QV4::ExecutionContext*, QV4::Referenced<QV4::String>, QV4::CallDataRef) (qv4runtime.cpp:890)
==9291== by 0x1C59CB52: ???
==9291== by 0x64A74F3: QV4::Function::code(QV4::ExecutionContext*, unsigned char const*) (qv4function_p.h:89)
==9291== by 0x64A675E: QV4::SimpleScriptFunction::call(QV4::Managed*, QV4::CallData*) (qv4functionobject.cpp:567)
==9291== by 0x64655EA: QV4::FunctionObject::call(QV4::CallData*) (qv4functionobject_p.h:130)
==9291== by 0x660334B: QQmlJavaScriptExpression::evaluate(QQmlContextData*, QV4::ValueRef, QV4::CallData*, bool*) (qqmljavascriptexpression.cpp:166)
==9291== by 0x6603037: QQmlJavaScriptExpression::evaluate(QQmlContextData*, QV4::ValueRef, bool*) (qqmljavascriptexpression.cpp:123)
==9291== by 0x660E116: QQmlBinding::update(QFlags<QQmlPropertyPrivate::WriteFlag>) (qqmlbinding.cpp:244)
==9291== by 0x660E88A: QQmlBinding::setEnabled(bool, QFlags<QQmlPropertyPrivate::WriteFlag>) (qqmlbinding.cpp:347)
==9291== by 0x660E7C6: QQmlBinding::setEnabled(QQmlAbstractBinding*, bool, QFlags<QQmlPropertyPrivate::WriteFlag>) (qqmlbinding.cpp:328)
==9291== by 0x652FAA1: QQmlAbstractBinding::setEnabled(bool, QFlags<QQmlPropertyPrivate::WriteFlag>) (qqmlabstractbinding_p.h:118)
==9291== by 0x6561C7E: QQmlVME::complete(QQmlVME::Interrupt const&) (qqmlvme.cpp:1161)
==9291== by 0x654C513: QQmlComponentPrivate::complete(QQmlEnginePrivate*, QQmlComponentPrivate::ConstructionState*) (qqmlcomponent.cpp:960)
==9291== by 0x654C5FC: QQmlComponentPrivate::completeCreate() (qqmlcomponent.cpp:997)
==9291== by 0x654C5AD: QQmlComponent::completeCreate() (qqmlcomponent.cpp:990)
==9291== by 0x654BCAC: QQmlComponent::create(QQmlContext*) (qqmlcomponent.cpp:805)
==9291== Address 0x101527c900 is not stack'd, malloc'd or (recently) free'd
Attachments
Issue Links
- is required for
-
QTBUG-33863 Issues to be fixed before Qt5.2 RC1 release
-
- Closed
-
For Gerrit Dashboard: QTBUG-34635 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
70870,1 | Fix out of bounds array index in the generated JIT code | stable | qt/qtdeclarative | Status: ABANDONED | +2 | 0 |
70939,1 | Fix out of bounds array index in the generated JIT code | release | qt/qtdeclarative | Status: MERGED | +2 | 0 |